php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #38700 __getTypes never returns / times out
Submitted: 2006-09-03 15:09 UTC Modified: 2006-09-04 13:56 UTC
From: chmt at gmx dot net Assigned: dmitry (profile)
Status: Closed Package: SOAP related
PHP Version: 5.1.6 OS: Windows 2003 server
Private report: No CVE-ID: None
 [2006-09-03 15:09 UTC] chmt at gmx dot net
Description:
------------
My wsdl based SoapClient times out or never returns whenever I call __getTypes.

The WSDL can be obtained from here:
http://media3.hgkz.ch/PlayerRPC.wsdl



Reproduce code:
---------------
function createWSDLUrl($url) {
  return 'http://'.$url.'?wsdl';
}

$client = new SoapClient(createWSDLUrl($url),
                 array("location"=>"http://".$url,
 	                "connection_timeout" => 5,
 		        "uri"=>"urn:Playout");

$client->__getTypes();

Expected result:
----------------
My types

Actual result:
--------------
Noting. It times out or never returns, and I waited for more than an hour :-/

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2006-09-04 08:34 UTC] tony2001@php.net
Please try using this CVS snapshot:

  http://snaps.php.net/php5.2-latest.tar.gz
 
For Windows:
 
  http://snaps.php.net/win32/php5.2-win32-latest.zip


 [2006-09-04 10:00 UTC] chmt at gmx dot net
Makes no difference. Still times out.
 [2006-09-04 10:56 UTC] dmitry@php.net
Fixed in CVS HEAD and PHP_5_2.
However the reason of infinity loop was a bug in WSDL file.
It should contain

  <complexType name="Play">
   <complexContent>
    <extension base="playout:PlayItem">

instead of

  <complexType name="Play">
   <complexContent>
    <extension base="PlayItem">


 [2006-09-04 13:56 UTC] chmt at gmx dot net
Ok, after I changed that I seem to get the types. The WSDL is (automaticaly) generated by gSOAP and validated just fine. Seems I have to dig a little bit further into what gsoap does (and why and if it is correct or not)...
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 14 11:00:02 2026 UTC