Fixed bug #38700 (SoapClient::__getTypes never returns)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@219341 c90b9560-bf6c-de11-be94-00142212c4b1